# viskum-compiler

./: Cargo.toml  LICENSE  README.md  file  file.ll  file.vs  hello  hello.ll  hello.vs  main  main.ll  temp.vs  webserver.vs
src/: main.rs
src/ast/: Cargo.toml
src/ast/src/: ast_arena.rs  ast_pre_resolver.rs  ast_prettifier.rs  ast_query_system.rs  ast_resolver.rs  ast_state.rs  ast_type_checker.rs  ast_visitor.rs  build_query  lib.rs  typechecker.rs  visit_resolved.rs  visit_unvalidated.rs  visitor.rs
src/ast/src/passes/: mod.rs  resolution.rs  type_checking.rs
src/ast_arena/: Cargo.toml
src/ast_arena/src/: lib.rs
src/ast_state/: Cargo.toml
src/ast_state/src/: lib.rs
src/ast_validator/: Cargo.toml
src/ast_validator/src/: lib.rs
src/codegen/: Cargo.toml
src/codegen/src/: lib.rs
src/compiler/: Cargo.toml
src/compiler/src/: lib.rs
src/core_traits/: Cargo.toml
src/core_traits/src/: lib.rs
src/data_structures/: Cargo.toml
src/data_structures/src/: chunked_hashmap.rs  chunked_vec.rs  lib.rs
src/diagnostics/: Cargo.toml
src/diagnostics/src/: lib.rs  lsp-notes.md
src/error/: Cargo.toml
src/error/src/: lib.rs
src/expr/: Cargo.toml
src/expr/src/: lib.rs
src/expr_builder/: Cargo.toml
src/expr_builder/src/: lib.rs
src/icfg/: Cargo.toml
src/icfg/src/: cfg_analyzer.rs  cfg_visitor.rs  icfg_prettifier.rs  icfg_v2.rs  lib.rs
src/icfg_builder/: Cargo.toml
src/icfg_builder/src/: lib.rs
src/ir/: Cargo.toml
src/ir/src/: ir_defs.rs  lib.rs  symbol.rs  ty.rs
src/ir_defs/: Cargo.toml
src/ir_defs/src/: lib.rs
src/lexer/: Cargo.toml
src/lexer/src/: lib.rs
src/op/src/: lib.rs
src/parser/: Cargo.toml
src/parser/src/: expr_builder.rs  lib.rs  make_parse_rule.rs  make_token_kind.rs  precedence.rs
src/precedence/: Cargo.toml
src/precedence/src/: lib.rs
src/prim_ty/: Cargo.toml
src/prim_ty/src/: lib.rs
src/resolver/: Cargo.toml
src/resolver/src/: lib.rs
src/span/: Cargo.toml
src/span/src/: lib.rs
src/symbol/: Cargo.toml
src/symbol/src/: lib.rs
src/token/: Cargo.toml
src/token/src/: lib.rs
src/ty/: Cargo.toml
src/ty/src/: lib.rs
src/type_ir/: Cargo.toml
src/type_ir/src/: lib.rs
viskum/: file.vs  std.vs
viskum/other/: ideas  macros.vs  webserver.vs
viskum/token/: token.vs
