[package]
name = "viskum-compiler"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ 
    "src/compiler",
    "src/ast",
    "src/lexer",
    "src/op",
    "src/parser",
    "src/span",
    "src/token" ,
    "src/core_traits",
    "src/resolver",
    "src/symbol",
    "src/ty", "src/error", "src/data_structures", 
]


[dependencies]
compiler = { path = "src/compiler"}

[cargo-new]
vcs = "none"

