[package]
name = "viskum-compiler"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ 
    "src/compiler",
    "src/ast",
    "src/lexer",
    "src/op",
    "src/parser",
    "src/span",
    "src/token" ,
    "src/resolver",
    "src/error",
    "src/data_structures",
    "src/diagnostics",
    "src/icfg",
    "src/icfg_builder",
    "src/codegen",
    "src/ir"
]


[dependencies]
compiler = { path = "src/compiler"}

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[cargo-new]
vcs = "none"

