[package]
name = "ast"
version = "0.1.0"
edition = "2021"



[dependencies]
# Libs in project
op = { path = "../op" }
span = { path = "../span" }
symbol = { path = "../symbol" }
ty = { path = "../ty" }
ir_defs = { path = "../ir_defs" }
error = { path = "../error" }
data_structures = { path = "../data_structures" }

# Extern crates
fxhash = "0.2.1"
derive-new = "0.7.0"
bumpalo = "3.16.0"
paste = "1.0.15"
typed-arena = { version = "2.0.2" }