[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
# Libs in project
icfg = { path = "../icfg" }
ir = { path = "../ir" }
op = { path = "../op" }
data_structures = { path = "../data_structures" }

# Extern crates
fxhash = "0.2.1"
threadpool = "1.8.1"
threadpool_scope = "0.1.0"