[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
parser = { path = "../parser" }
ast = { path = "../ast" }
resolver = { path = "../resolver" }
icfg_builder = { path = "../icfg_builder" }
icfg = { path = "../icfg" }
ty = { path = "../ty" }
codegen = { path = "../codegen" }