[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# Libs in project
parser = { path = "../parser" }
ast = { path = "../ast" }
resolver = { path = "../resolver" }
icfg_builder = { path = "../icfg_builder" }
icfg = { path = "../icfg" }
ir = { path = "../ir" }
codegen = { path = "../codegen" }
diagnostics = { path = "../diagnostics" }

# Extern crates
bumpalo = "3.1.16"
threadpool = "1.8.1"
threadpool_scope = "0.1.0"