[package]
name = "icfg_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Libs in project
ast = { path = "../ast" }
ir_defs = { path = "../ir_defs" }
icfg = { path = "../icfg" }
ty = { path = "../ty" }
resolver = { path = "../resolver" }
span = { path = "../span" }
symbol = { path = "../symbol" }
op = { path = "../op" }
data_structures = { path = "../data_structures" }

# Extern crates
fxhash = "0.2.1"