[package]
name = "icfg_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Libs in project
ast = { path = "../ast" }
icfg = { path = "../icfg" }
resolver = { path = "../resolver" }
span = { path = "../span" }
ir = { path = "../ir" }
op = { path = "../op" }
data_structures = { path = "../data_structures" }

# Extern crates
fxhash = "0.2.1"
bumpalo = "3.16.0"