[package]
name = "parser"
version = "0.1.0"
edition = "2021"



[dependencies]
enum-iterator = "2.1.0"
array-init = "2.1.0"
lexer = { path = "../lexer" }
token = { path = "../token" }
op = { path = "../op" }
ast = { path = "../ast" }
span = { path = "../span" }
symbol = { path = "../symbol" }
ty = { path = "../ty" }