[package]
name = "parser"
version = "0.1.0"
edition = "2021"



[dependencies]
lexer = { path = "../lexer" }
token = { path = "../token" }
op = { path = "../op" }
ast = { path = "../ast" }
span = { path = "../span" }
error = { path = "../error" }
ir = { path = "../ir" }

enum-iterator = "2.1.0"
array-init = "2.1.0"