[package]
name = "parser"
version = "0.1.0"
edition = "2021"



[dependencies]
lexer = { path = "../lexer" }
token = { path = "../token" }
op = { path = "../op" }
ast = { path = "../ast" }
span = { path = "../span" }
error = { path = "../error" }
ir = { path = "../ir" }
diagnostics = { path = "../diagnostics" }

fxhash = "0.2.1"
enum-iterator = "2.1.0"
array-init = "2.1.0"